IRC channel moves to Discord

--- a/_includes/nav.htm
+++ b/_includes/nav.htm
@@ -17,7 +17,7 @@
     <div class="C-bar"></div>
     
     <div class="header-C">
-    <a href="irc.htm">Live Chat</a>
+    <a href="https://discord.gg/wWdnduP">Discord</a>
     </div>
 
     <div class="C-bar"></div>
